Ajuste en header y filtro de seleccíon de códigos y validaciones varias